# newsapi-rust-lib

./: .gitignore  Cargo.toml
src/: lib.rs  misc.rs
src/structs/: article.rs  mod.rs  newsapi.rs
