[package]
name = "newsapi-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
ureq = {version = "2.6.0", features = ["json", "charset"]}
serde = {version = "*", features = ["derive"]}
colour = "0.6.0"
